Fix(navbar): Align navbar items properly in navbar
-Placed each item in a column for auto resize instead of using css

--- a/hirola/front/static/front/css/landing_page.css
+++ b/hirola/front/static/front/css/landing_page.css
@@ -1,12 +1,11 @@
 html,
 body {
     height: 100%;
-    flex: 1;
 }
 
 .carousel {
     height: auto;
-    height: 93.5vh;
+    height: 93.3vh;
 }
 
 .content {
